src/main/java/com/navi/backend/lexer_parser/y/YParser.java
package com.navi.backend.lexer_parser.y;// Generated from YParser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class YParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, STRUCTURES=3, FUNCTIONS=4, STRUCTURE=5, DEFINE=6, 
		IF=7, THEN=8, ELSE=9, OTHERWISE=10, SWITCH=11, CASE=12, ALWAYS=13, FOR=14, 
		WHILE=15, DO=16, BREAK=17, CONTINUE=18, RETURN=19, PRINT=20, READ=21, 
		INTEGER=22, FLOAT=23, CHARACTER=24, BOOLEAN=25, STRING=26, TRUE=27, FALSE=28, 
		INCREMENT=29, DECREMENT=30, PLUS=31, MINUS=32, MULT=33, DIV=34, MOD=35, 
		AND=36, OR=37, NOT=38, EQUAL=39, NOT_EQUAL=40, LESS_EQUAL=41, GREATER_EQUAL=42, 
		LESS=43, GREATER=44, PLUS_ASSIGN=45, MINUS_ASSIGN=46, MULT_ASSIGN=47, 
		ASSIGN=48, ARROW=49, LPAREN=50, RPAREN=51, LBRACK=52, RBRACK=53, LBRACE=54, 
		RBRACE=55, COMMA=56, COLON=57, SEMI=58, DOT=59, FLOAT_LITERAL=60, INTEGER_LITERAL=61, 
		CHAR_LITERAL=62, STRING_LITERAL=63, ID=64, LINE_COMMENT=65, BLOCK_COMMENT=66, 
		NEWLINE=67, WS=68;
	public static final int
		RULE_program = 0, RULE_structuresSection = 1, RULE_functionsSection = 2, 
		RULE_structureDeclaration = 3, RULE_structureField = 4, RULE_arrayDimensions = 5, 
		RULE_functionDeclaration = 6, RULE_returnType = 7, RULE_parameterList = 8, 
		RULE_parameter = 9, RULE_arrayParameter = 10, RULE_structureParameter = 11, 
		RULE_statement = 12, RULE_variableDeclaration = 13, RULE_variableDeclarationCore = 14, 
		RULE_arrayDeclaration = 15, RULE_initializer = 16, RULE_arrayInitializer = 17, 
		RULE_arrayInitializerElementList = 18, RULE_arrayInitializerElement = 19, 
		RULE_structureInitializer = 20, RULE_expressionList = 21, RULE_assignmentStatement = 22, 
		RULE_assignmentOperator = 23, RULE_incrementStatement = 24, RULE_assignableExpression = 25, 
		RULE_ifStatement = 26, RULE_elseIfClause = 27, RULE_elseClause = 28, RULE_switchStatement = 29, 
		RULE_switchCase = 30, RULE_defaultCase = 31, RULE_forStatement = 32, RULE_forInitializer = 33, 
		RULE_variableDeclarationWithoutNewline = 34, RULE_forUpdate = 35, RULE_whileStatement = 36, 
		RULE_doWhileStatement = 37, RULE_breakStatement = 38, RULE_continueStatement = 39, 
		RULE_returnStatement = 40, RULE_printStatement = 41, RULE_readStatement = 42, 
		RULE_expressionStatement = 43, RULE_expression = 44, RULE_logicalOrExpression = 45, 
		RULE_logicalAndExpression = 46, RULE_equalityExpression = 47, RULE_comparisonExpression = 48, 
		RULE_additiveExpression = 49, RULE_multiplicativeExpression = 50, RULE_unaryExpression = 51, 
		RULE_postfixExpression = 52, RULE_postfixOperation = 53, RULE_primaryExpression = 54, 
		RULE_argumentList = 55, RULE_type = 56;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "structuresSection", "functionsSection", "structureDeclaration", 
			"structureField", "arrayDimensions", "functionDeclaration", "returnType", 
			"parameterList", "parameter", "arrayParameter", "structureParameter", 
			"statement", "variableDeclaration", "variableDeclarationCore", "arrayDeclaration", 
			"initializer", "arrayInitializer", "arrayInitializerElementList", "arrayInitializerElement", 
			"structureInitializer", "expressionList", "assignmentStatement", "assignmentOperator", 
			"incrementStatement", "assignableExpression", "ifStatement", "elseIfClause", 
			"elseClause", "switchStatement", "switchCase", "defaultCase", "forStatement", 
			"forInitializer", "variableDeclarationWithoutNewline", "forUpdate", "whileStatement", 
			"doWhileStatement", "breakStatement", "continueStatement", "returnStatement", 
			"printStatement", "readStatement", "expressionStatement", "expression", 
			"logicalOrExpression", "logicalAndExpression", "equalityExpression", 
			"comparisonExpression", "additiveExpression", "multiplicativeExpression", 
			"unaryExpression", "postfixExpression", "postfixOperation", "primaryExpression", 
			"argumentList", "type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'%estructuras'", "'%funciones'", "'estructura'", "'definir'", 
			"'si'", "'entonces'", "'sino'", "'contrario'", "'elegir'", "'caso'", 
			"'siempre'", "'para'", "'mientras'", "'hacer'", "'romper'", "'continuar'", 
			"'retornar'", "'imprimir'", "'leer'", "'entero'", "'flotante'", "'caracter'", 
			"'bool'", "'cadena'", "'verdadero'", "'falso'", "'++'", "'--'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'&&'", "'||'", "'!'", "'=='", "'!='", "'<='", 
			"'>='", "'<'", "'>'", "'+='", "'-='", "'*='", "'='", "'->'", "'('", "')'", 
			"'['", "']'", "'{'", "'}'", "','", "':'", "';'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "STRUCTURES", "FUNCTIONS", "STRUCTURE", "DEFINE", 
			"IF", "THEN", "ELSE", "OTHERWISE", "SWITCH", "CASE", "ALWAYS", "FOR", 
			"WHILE", "DO", "BREAK", "CONTINUE", "RETURN", "PRINT", "READ", "INTEGER", 
			"FLOAT", "CHARACTER", "BOOLEAN", "STRING", "TRUE", "FALSE", "INCREMENT", 
			"DECREMENT", "PLUS", "MINUS", "MULT", "DIV", "MOD", "AND", "OR", "NOT", 
			"EQUAL", "NOT_EQUAL", "LESS_EQUAL", "GREATER_EQUAL", "LESS", "GREATER", 
			"PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", "ASSIGN", "ARROW", "LPAREN", 
			"RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COMMA", "COLON", "SEMI", 
			"DOT", "FLOAT_LITERAL", "INTEGER_LITERAL", "CHAR_LITERAL", "STRING_LITERAL", 
			"ID", "LINE_COMMENT", "BLOCK_COMMENT", "NEWLINE", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "YParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public YParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public FunctionsSectionContext functionsSection() {
			return getRuleContext(FunctionsSectionContext.class,0);
		}
		public TerminalNode EOF() { return getToken(YParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(YParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(YParser.NEWLINE, i);
		}
		public StructuresSectionContext structuresSection() {
			return getRuleContext(StructuresSectionContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(114);
				match(NEWLINE);
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRUCTURES) {
				{
				setState(120);
				structuresSection();
				}
			}

			setState(123);
			functionsSection();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(124);
				match(NEWLINE);
				}
				}
				setState(129);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(130);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructuresSectionContext extends ParserRuleContext {
		public TerminalNode STRUCTURES() { return getToken(YParser.STRUCTURES, 0); }
		public TerminalNode NEWLINE() { return getToken(YParser.NEWLINE, 0); }
		public List<StructureDeclarationContext> structureDeclaration() {
			return getRuleContexts(StructureDeclarationContext.class);
		}
		public StructureDeclarationContext structureDeclaration(int i) {
			return getRuleContext(StructureDeclarationContext.class,i);
		}
		public StructuresSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structuresSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterStructuresSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitStructuresSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitStructuresSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructuresSectionContext structuresSection() throws RecognitionException {
		StructuresSectionContext _localctx = new StructuresSectionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_structuresSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(STRUCTURES);
			setState(133);
			match(NEWLINE);
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(134);
				structureDeclaration();
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==STRUCTURE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionsSectionContext extends ParserRuleContext {
		public TerminalNode FUNCTIONS() { return getToken(YParser.FUNCTIONS, 0); }
		public TerminalNode NEWLINE() { return getToken(YParser.NEWLINE, 0); }
		public List<FunctionDeclarationContext> functionDeclaration() {
			return getRuleContexts(FunctionDeclarationContext.class);
		}
		public FunctionDeclarationContext functionDeclaration(int i) {
			return getRuleContext(FunctionDeclarationContext.class,i);
		}
		public FunctionsSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionsSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterFunctionsSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitFunctionsSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitFunctionsSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionsSectionContext functionsSection() throws RecognitionException {
		FunctionsSectionContext _localctx = new FunctionsSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionsSection);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(FUNCTIONS);
			setState(140);
			match(NEWLINE);
			setState(142); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(141);
				functionDeclaration();
				}
				}
				setState(144); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DEFINE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructureDeclarationContext extends ParserRuleContext {
		public TerminalNode STRUCTURE() { return getToken(YParser.STRUCTURE, 0); }
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public TerminalNode COLON() { return getToken(YParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(YParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YParser.DEDENT, 0); }
		public List<StructureFieldContext> structureField() {
			return getRuleContexts(StructureFieldContext.class);
		}
		public StructureFieldContext structureField(int i) {
			return getRuleContext(StructureFieldContext.class,i);
		}
		public StructureDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structureDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterStructureDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitStructureDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitStructureDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructureDeclarationContext structureDeclaration() throws RecognitionException {
		StructureDeclarationContext _localctx = new StructureDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_structureDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(STRUCTURE);
			setState(147);
			match(ID);
			setState(148);
			match(COLON);
			setState(149);
			match(NEWLINE);
			setState(150);
			match(INDENT);
			setState(152); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(151);
				structureField();
				}
				}
				setState(154); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 22)) & ~0x3f) == 0 && ((1L << (_la - 22)) & 4398046511135L) != 0) );
			setState(156);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StructureFieldContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public TerminalNode NEWLINE() { return getToken(YParser.NEWLINE, 0); }
		public ArrayDimensionsContext arrayDimensions() {
			return getRuleContext(ArrayDimensionsContext.class,0);
		}
		public StructureFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structureField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterStructureField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitStructureField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitStructureField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructureFieldContext structureField() throws RecognitionException {
		StructureFieldContext _localctx = new StructureFieldContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_structureField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			type();
			setState(159);
			match(ID);
			setState(161);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(160);
				arrayDimensions();
				}
			}

			setState(163);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ArrayDimensionsContext extends ParserRuleContext {
		public List<TerminalNode> LBRACK() { return getTokens(YParser.LBRACK); }
		public TerminalNode LBRACK(int i) {
			return getToken(YParser.LBRACK, i);
		}
		public List<TerminalNode> INTEGER_LITERAL() { return getTokens(YParser.INTEGER_LITERAL); }
		public TerminalNode INTEGER_LITERAL(int i) {
			return getToken(YParser.INTEGER_LITERAL, i);
		}
		public List<TerminalNode> RBRACK() { return getTokens(YParser.RBRACK); }
		public TerminalNode RBRACK(int i) {
			return getToken(YParser.RBRACK, i);
		}
		public ArrayDimensionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arrayDimensions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterArrayDimensions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitArrayDimensions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitArrayDimensions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArrayDimensionsContext arrayDimensions() throws RecognitionException {
		ArrayDimensionsContext _localctx = new ArrayDimensionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arrayDimensions);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(165);
				match(LBRACK);
				setState(166);
				match(INTEGER_LITERAL);
				setState(167);
				match(RBRACK);
				}
				}
				setState(170); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LBRACK );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionDeclarationContext extends ParserRuleContext {
		public TerminalNode DEFINE() { return getToken(YParser.DEFINE, 0); }
		public TerminalNode ID() { return getToken(YParser.ID, 0); }
		public TerminalNode LPAREN() { return getToken(YParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(YParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(YParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(YParser.NEWLINE, 0); }
		public TerminalNode INDENT() { return getToken(YParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(YParser.DEDENT, 0); }
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public ReturnTypeContext returnType() {
			return getRuleContext(ReturnTypeContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FunctionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).enterFunctionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof YParserListener ) ((YParserListener)listener).exitFunctionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof YParserVisitor ) return ((YParserVisitor<? extends T>)visitor).visitFunctionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDeclarationContext functionDeclaration() throws RecognitionException {
		FunctionDeclarationContext _localctx = new FunctionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_functionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(DEFINE);
			setState(173);
			match(ID);
			setState(174);
			match(LPAREN);
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (((((_la - 22)) & ~0x3f) == 0 && ((1L << (_la - 22)) & 4403415220255L) != 0)) {
				{
				setState(175);
				parameterList();
				}
			}

			setState(178);
			match(RPAREN);
			setState(180);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(179);
				returnType();
				}
			}

			setState(182);
			match(COLON);
			setState(183);
			match(NEWLINE);
			setState(184);
			match(INDENT);
			setState(188);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 5)) & ~0x3f) == 0 && ((1L << (_la - 5)) & 1116927900700900933L) != 0)) {
				{
				{
				setState(185);
				statement();
				}
				}
				setState(190);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(191);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
